--- a/dota/dashboard/aegis.html
+++ b/dota/dashboard/aegis.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<script src="js/aegis.js"></script>
-	<link rel="import" href="/bower_components/polymer/polymer.html">
-	<link rel="import" href="/bower_components/paper-item/paper-item.html">
-	<link rel="import" href="/bower_components/paper-button/paper-button.html">
+	<link rel="import" href="../bower_components/polymer/polymer.html">
+	<link rel="import" href="../bower_components/paper-item/paper-item.html">
+	<link rel="import" href="../bower_components/paper-button/paper-button.html">
 	<link rel="stylesheet" href="style/style.css">
 </head>
 <body>
