--- a/dota/dashboard/stats.html
+++ b/dota/dashboard/stats.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<script src="js/stats.js"></script>
-	<link rel="import" href="/bower_components/polymer/polymer.html">
-	<link rel="import" href="/bower_components/paper-input/paper-input.html">
-	<link rel="import" href="/bower_components/paper-item/paper-item.html">
-	<link rel="import" href="/bower_components/paper-button/paper-button.html">
-	<link rel="import" href="/bundles/dota/bower_components/paper-checkbox/paper-checkbox.html">
+	<link rel="import" href="../bower_components/polymer/polymer.html">
+	<link rel="import" href="../bower_components/paper-input/paper-input.html">
+	<link rel="import" href="../bower_components/paper-item/paper-item.html">
+	<link rel="import" href="../bower_components/paper-button/paper-button.html">
+	<link rel="import" href="../bower_components/paper-checkbox/paper-checkbox.html">
 	<link rel="stylesheet" href="style/style.css">
 </head>
 <body>
