--- a/dota/dashboard/teams.html
+++ b/dota/dashboard/teams.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<script src="js/teams.js"></script>
-	<link rel="import" href="/bower_components/polymer/polymer.html">
-	<link rel="import" href="/bower_components/paper-input/paper-input.html">
-	<link rel="import" href="/bower_components/paper-item/paper-item.html">
-	<link rel="import" href="/bower_components/paper-button/paper-button.html">
+	<link rel="import" href="../bower_components/polymer/polymer.html">
+	<link rel="import" href="../bower_components/paper-input/paper-input.html">
+	<link rel="import" href="../bower_components/paper-item/paper-item.html">
+	<link rel="import" href="../bower_components/paper-button/paper-button.html">
 	<link rel="stylesheet" href="style/style.css">
 </head>
 <body>
